[SR-13637] Handling Diagnostic for [unowned self] when in is missing